added several layers + build files